@@ -1,4 +1,4 @@
-<p><strong><?=$subject;?></strong></p>
+<h3><?=$subject;?></strong></h3>
 <p>Posted by <?=$postedby;?> on <?=$postdate;?></p>
 <p><?php echo html_entity_decode($body);?></p>
 <hr>
